# mwe-skbuid-to-core

./: .gitignore  README.md
scikit-build/: CMakeLists.txt  pyproject.toml  setup.py
scikit-build-core/: CMakeLists.txt  pyproject.toml
scikit-build-core/sub/: configure.ac
scikit-build-core/sub/src/: Makefile.am  mycpplib.cpp
scikit-build/sub/src/: mycpplib.h
