[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.26.1"

[project]
name = "mwe-skbuild-to-core"
version = "0.1.0"
description = "pybind11 + autotools + scikit-build-core example"
requires-python = ">=3.12"
