[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    "pybind11[global]",
]
build-backend = "setuptools.build_meta"

[project]
name = "mwe-skbuild-to-core"
version = "0.1.0"
description = "pybind11 + autotools + scikit-build example"
requires-python = ">=3.12"
